--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,5 +23,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:25.0.1"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
+    testCompile 'junit:junit:4.12'
 
 }
