--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".activity.TestActivity" >
+        <activity android:name=".fragmenttest.FragmentTestActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,8 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-        <service android:name=".service.Test2Service"/>
-        <service android:name=".service.TestService"/>
+        <activity android:name=".servicetest.ServiceTestActivity"/>
+        <activity android:name=".saveTest.SaveTestActivity"/>
+        <service android:name=".servicetest.Test2Service"/>
+        <service android:name=".servicetest.TestService"/>
     </application>
 
 </manifest>
