--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,27 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyApplication"
         android:theme="@style/AppTheme" >
-        <activity android:name=".fragmenttest.FragmentTestActivity" >
+        <activity android:name=".handler.HandlerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".servicetest.ServiceTestActivity"/>
+        <activity android:name=".fragmenttest.FragmentTestActivity"/>
         <activity android:name=".saveTest.SaveTestActivity"/>
         <service android:name=".servicetest.Test2Service"/>
         <service android:name=".servicetest.TestService"/>
+        <activity android:name=".servicetest.ServiceTestActivity"/>
+
+        <activity android:name=".binder.BinderActivity"
+            android:process=":binder"/>
+        <activity android:name=".binder.Binder2Activity"
+            android:process=":binder"/>
+        <activity android:name=".MainActivity"/>
+
     </application>
 
 </manifest>
