--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.android.support:design:${SUPPORT_LIB_VERSION}"
-    testCompile 'junit:junit:4.12'
-    implementation files('libs/kefu-sdk-1.1.8.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:25.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:design:${SUPPORT_LIB_VERSION}"
+    testImplementation 'junit:junit:4.12'
+    api files('libs/kefu-sdk-1.1.8.jar')
 }
