--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:name=".MyApplication"
         android:theme="@style/AppTheme" >
-        <activity android:name=".binder.BinderActivity">
+        <activity android:name=".listview.RecyclerviewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,13 +18,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".fragmenttest.FragmentTestActivity"/>
-        <activity android:name=".saveTest.SaveTestActivity"/>
+        <activity android:name=".saveinstanceTest.SaveTestActivity"/>
         <service android:name=".servicetest.Test2Service"/>
         <service android:name=".servicetest.TestService"/>
         <activity android:name=".servicetest.ServiceTestActivity"/>
+        <activity android:name=".jni.JNIActivity"/>
 
-        <!--<activity android:name=".binder.BinderActivity" />-->
+        <activity android:name=".binder.BinderActivity" />
         <activity android:name=".handler.HandlerActivity" />
+        <activity android:name=".okhttp.OkHttpActivity" />
+        <!--<activity android:name=".listview.RecyclerviewActivity" />-->
+        <activity android:name=".listview.ListViewActivity" />
 
         <activity android:name=".MainActivity"/>
         <service android:name=".binder.PushService"
