--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.test.demos.demos" >
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
 
     <application
         android:allowBackup="true"
@@ -10,11 +12,10 @@
         android:supportsRtl="true"
         android:name=".MyApplication"
         android:theme="@style/AppTheme" >
-        <activity android:name=".listview.RecyclerviewActivity">
+        <activity android:name=".sort.SortActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".fragmenttest.FragmentTestActivity"/>
@@ -27,8 +28,11 @@
         <activity android:name=".binder.BinderActivity" />
         <activity android:name=".handler.HandlerActivity" />
         <activity android:name=".okhttp.OkHttpActivity" />
-        <!--<activity android:name=".listview.RecyclerviewActivity" />-->
+        <activity android:name=".listview.RecyclerviewActivity" />
         <activity android:name=".listview.ListViewActivity" />
+        <activity android:name=".listview.ViewpagerActivity" />
+        <activity android:name=".rxjava.RxjavaActivity" />
+        <!--<activity android:name=".sort.SortActivity" />-->
 
         <activity android:name=".MainActivity"/>
         <service android:name=".binder.PushService"
