--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     testImplementation 'junit:junit:4.12'
+    api 'io.reactivex:rxjava:1.0.14'
+    api 'io.reactivex:rxandroid:1.0.1'
     api files('libs/kefu-sdk-1.1.8.jar')
 }
